fix z-index

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1000; /* Ensures the header stays above other content */
+    z-index: 2; /* Ensures the header stays above other content */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Optional: Adds a shadow for better visibility */
 }
 
@@ -48,7 +48,7 @@ header {
 .dialog {
     display: none;
     position: fixed;
-    z-index: 2;
+    z-index: 3;
     left: 0;
     top: 0;
     width: 100%;
@@ -180,7 +180,7 @@ swiper-slide img {
     position: absolute;
     right: 16px;
     bottom: 16px;
-    z-index: 10;
+    z-index: 1;
     /*width: 48px;*/
     height: 48px;
     display: flex;
@@ -193,7 +193,7 @@ swiper-slide img {
     position: absolute;
     left: 0;
     top: 0;
-    z-index: 10;
+    z-index: 1;
     width: 100%;
     height: 100%;
     stroke-width: 4px;
@@ -304,7 +304,7 @@ li{
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     left: 0;
     top: 0;
     width: 100%;
@@ -757,7 +757,7 @@ footer{
 .myModal {
     display: none; /* Скрываем модальное окно по умолчанию */
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     padding-top: 0; /* Убираем отступ сверху */
     left: 0;
     top: 0;
